atividade listas e tabelas aula

--- a/index.html
+++ b/index.html
@@ -1,11 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <title>Listas</title>
 </head>
+
 <body>
-    <h1>Agora vai dar certo! ☺</h1>
+    <header>
+        <nav>
+            <a href="index.html" style="margin: 20px">Listas</a>
+            <a href="tabela.html" style="margin: 20px">Tabelas</a>
+            <a href="outros.html" style="margin: 20px">Outros</a>
+            <a href="atividade.html" style="margin: 20px">Atividade</a>
+            <!-- <a href="Javascript.html" style="margin: 20px">Javascript</a> -->
+        </nav>
+    </header>
+
+    <main>
+        <br>
+        <h1>Listas HTML</h1>
+        <br>
+        <h2>Ordenadas</h2>
+
+        <h3>Comum</h3>
+        <ol>
+            <li>Coffe</li>
+            <li>Tea</li>
+            <li>Milk</li>
+            <li>Water</li>
+        </ol>
+
+        <h3>Minúsculas</h3>
+        <ol type="a">
+            <li>Coffe</li>
+            <li>Tea</li>
+            <li>Milk</li>
+            <li>Water</li>
+        </ol>
+
+        <h3>Maiúsculas</h3>
+        <ol type="A">
+            <li>Coffe</li>
+            <li>Tea</li>
+            <li>Milk</li>
+            <li>Water</li>
+        </ol>
+
+        <h3>Romanos</h3>
+        <ol type="I">
+            <li>Coffe</li>
+            <li>Tea</li>
+            <li>Milk</li>
+            <li>Water</li>
+        </ol>
+
+        <h3>Romanos minúsculos</h3>
+        <ol type="i">
+            <li>Coffe</li>
+            <li>Tea</li>
+            <li>Milk</li>
+            <li>Water</li>
+        </ol>
+
+        <h3>Reverso</h3>
+        <ol reversed>
+            <li>Coffe</li>
+            <li>Tea</li>
+            <li>Milk</li>
+            <li>Water</li>
+        </ol>
+
+        <br>
+
+        <h2>Não ordenadas</h2>
+
+        <h3>Comum</h3>
+        <ul>
+            <li>Coffe</li>
+            <li>Tea</li>
+            <li>Milk</li>
+            <li>Water</li>
+        </ul>
+
+        <h3><mark>Comum</mark></h3>
+        <ul>
+            <li>Coffe</li>
+            <li>Tea</li>
+            <li>Milk</li>
+            <li>Water</li>
+        </ul>
+
+        <br>
+        <h2>Lista com descrições</h2>
+
+        <!-- <h3>Comum</h3> -->
+        <dl>
+            <dt>Coffe</dt>
+            <dd>Preta e quente</dd>
+            <dt>Tea</dt>
+            <dd>clara e quente</dd>
+            <dt>Milk</dt>
+            <dd>Branca e gelada</dd>
+            <dt>Water</dt>
+            <dd>Transparente e neutra</dd>
+        </dl>
+
+        <br>
+        <h2>Lista aninhada</h2>
+
+        <!-- <h3>Comum</h3> -->
+        <ul>
+            <li>Coffe</li>
+            <ul>Coffe</ul>
+            <li>Moído</li>
+            <li>Solúvel</li>
+            <li>Em grãos</li>
+            <li>Tea</li>
+            <li>Milk</li>
+            <li>Water</li>
+        </ul>
+    </main>
+
 </body>
+
 </html>
